# QuanolaGame

./: .clang-format  .gitignore  CMakeLists.txt  MarkdownToMermaid.py  ParseMarkdown.py  TaskList.md  conanfile.py  nodedata.json
include/: CliRenderer.hpp  Event.hpp  GameManager.hpp  GameState.hpp  IRenderer.hpp  Node.hpp  Option.hpp  Serializer.hpp
src/: CliRenderer.cpp  GameManager.cpp  Node.cpp  Option.cpp  Serializer.cpp  quanola.cpp
